# wlbs-cli

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HARNESS_ROADMAP.md  LICENSE  MANIFEST.in  PAPER.md  README.md  WLBS_PRODUCT_SPEC.md  WLBS_PRODUCT_SPECV3.md  WLBS_paper_SUBMIT_HuangZhongchang.docx  callgraph_extractor.py  defects4j_bridge.py  experiment_runner.py  pyproject.toml  pyrightconfig.json  requirements.txt  sbfl_baseline.py  setup.py  synthetic_case.py  wlbs_core.py  wlbs_dashboard.py  wlbs_scan.py  wlbs_server.py  ~$BS_paper_SUBMIT_HuangZhongchang.docx
demo/: rbac.py  roles.py
demo/tests/: test_rbac.py
deploy/: DEPLOY_V3.md  wlbs_server.env.example  wlbs_server.service
docs/: QUICKSTART.md
paper/: main.tex  refs.bib
results/: summary.json  summary.md  synthetic_case.json
tests/: test_advisory.py  test_policy.py  test_product_v3.py  test_task_memory.py  test_wlbs_scan.py
validation/: PRODUCT_EVIDENCE.md  SWEBENCH_GROWTH_PROTOCOL.md  VALIDATION_RESULTS.md  generate_swebench_sample_prediction.py  product_evidence.json  run_product_evidence.py  run_swebench_batch_real.py  run_swebench_preflight.py  run_validation.py  swebench_preflight.json  validation_results.json
validation/batch_swebench/: BATCH_REPORT.md  WLBS_SWEbench_10task_report_20260326.docx  batch_results.json
validation/batch_swebench/runs/marshmallow-code__marshmallow-1343/: baseline_fail_to_pass.txt  baseline_pass_to_pass.txt  prompt.txt  raw_model_output_round1.txt  raw_model_output_round2.txt  raw_model_output_round3.txt  sample.patch  sample_round1.patch  sample_round2.patch  summary.json
validation/batch_swebench/runs/pvlib__pvlib-python-1072/: candidate.patch  (+9 more)
validation/evidence/logs/: demo_advise.json  demo_status.txt
validation/evidence/swebench_2419/: REAL_TEST_EVIDENCE.md  baseline_fixture_test.txt  baseline_lint_probe.txt  baseline_target_test.txt  patched_fixture_test.txt  patched_lint_probe.txt  patched_target_test.txt  summary.json
validation/swebench_sample/: candidate.patch  instance_2419.json  predictions.jsonl  process_log.md  prompt.txt  raw_model_output.txt  raw_model_output_round1.txt  raw_model_output_round2.txt  raw_model_output_round3.txt  raw_model_output_round4.txt  sample_round1.patch  sample_round2.patch  sample_round3.patch  summary.json
wlbs_scan/: __init__.py  _impl.py  cloud.py  dashboard.py  validate.py  wlbs_pytest_plugin.py
(+89 files in other folders)
