[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wlbs-scan"
version = "0.6.0"
description = "WLBS Behavior Graph Scanner - static + dynamic curvature analysis for Python/JS codebases"
readme = "README.md"
authors = [
  { name = "Zhongchang Huang", email = "valhuang@kaiwucl.com" }
]
license = "LicenseRef-BSL-1.1"
requires-python = ">=3.8"
keywords = [
  "static analysis",
  "behavior graph",
  "curvature",
  "world-line",
  "code quality",
  "fault localization",
  "MoE"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Operating System :: OS Independent"
]

[project.scripts]
wlbs-scan = "wlbs_scan:main"

[project.entry-points."pytest11"]
wlbs = "wlbs_scan.wlbs_pytest_plugin"

[project.optional-dependencies]
server = [
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "pydantic>=2.0"
]

[project.urls]
Homepage = "https://github.com/val1813/wlbs-cli"
Issues = "https://github.com/val1813/wlbs-cli/issues"

[tool.setuptools]
packages = ["wlbs_scan"]
include-package-data = true
